package com.dutianze.designpattern.concurrency.lockableobject.domain.types;

/**
 * @author dutianze
 * @date 2022/9/6
 */
public enum CreatureType {

    ORC,
    HUMAN,
    ELF
}